# minipass

./: .gitignore  CMakeLists.txt  README.md  version.json
.github/workflow/: build.yml
.github/workflows/: build.yml  release.yml
assets/icon/: minipass.rc
inc/: minipass.hpp  utils.hpp
res/: mnemonic-seeds.txt
scripts/: build.bat  build.sh  build_and_run.bat  clean.bat  clean.sh  install.bat  install.sh  linux_app_icon.sh
src/: CMakeLists.txt  main.cpp  mainCLI.cpp  mainGUI.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  minipass.cpp  minipass.hpp  minipass.ui  ui_minipass.h  utils.cpp  utils.hpp
src/test/: googletest_minipass.cpp
test/: CMakeLists.txt  googletest_minipass.cpp  test_minipass.cpp  test_utils.cpp
